# soft_segmentation

./: CMakeLists.txt  README.txt  sphere01.txt
include/: ColorModel.h  Minimization.h  Pixel.h  ThreadPool.h  Unmixing.h  constants.h  guidedfilter.h
include/CPM_include/: ImageIO.h  OpticFlowIO.h  Stochastic.h
src/: ColorModel.cpp  Pixel.cpp  guidedfilter.cpp  main.cpp
